--- a/genres.ini
+++ b/genres.ini
@@ -3,3 +3,4 @@ alternative_rock=Alternative Rock (EN + RU)
 rusrock=Русский рок
 rusrap=Русский рэп
 classicmetal=Классика металла (EN + RU + Any)
+pop=Поп-музыка (RU + EN + Any)
