--- a/genres.ini
+++ b/genres.ini
@@ -1,6 +1,1 @@
-﻿any=Any of genres (EN + RU + Any)
-alternative_rock=Alternative Rock (EN + RU)
-rusrock=Русский рок
-rusrap=Русский рэп
-classicmetal=Классика металла (EN + RU + Any)
-pop=Поп-музыка (RU + EN + Any)
+﻿any=Any music
